<resources>
    <string name="app_name">Hello J-oxy</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="colon">:</string>
    <string name="galon_hexagonal">Galon Hexagonal</string>

    <string name="galon_ro">Galon RO</string>
    <string name="total_belanja">Total Belanja :</string>
    <string name="nama_penerima">NAMA PENERIMA :</string>
    <string name="name">Name</string>
    <string name="alamat">ALAMAT :</string>
    <string name="alamat_lengkap_komplek_nomor_rumah_gedung">Alamat Lengkap/ Komplek/ Nomor Rumah/ Gedung :</string>
    <string name="no_handphone">NO. HANDPHONE :</string>
    <string name="informasi_lainnya">INFORMASI LAINNYA</string>
    <string name="tanggal_lahir">TANGGAL LAHIR :</string>
    <string name="jenis_kelamin">JENIS KELAMIN :</string>
    <string name="lanjutkan_pembayaran">Lanjutkan Pembayaran</string>
    <string name="selesai">Selesai</string>
    <string name="nol">0</string>

    <string name="air_hexagonal">Air Hexagonal</string>
    <string name="plus">+</string>

    <string name="harga_rp_8_000">Harga : Rp. 8.000</string>

    <string name="minus">-</string>
    <string name="air_ro">Air RO</string>
    <string name="harga_rp_6_000">Harga : Rp. 6.000</string>
    <string name="pesan">Pesan</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="signed_in">Signed In</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="loading">Loading…</string>

    <string name="str_Sign_In_failed">Sign-In failed</string>
    <string name="str_Sign_Up_failed">Sign-Up failed</string>
</resources>
