<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.imobilenetid.helloj_oxy.BerandaFragment"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/galonhexagonal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button_plushx"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/plus" />

                        <EditText
                            android:id="@+id/jumlah_galon_hx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:editable="false"
                            android:ems="10"
                            android:hint="@string/nol"
                            android:inputType="none"
                            android:text="@string/nol"
                            android:textAlignment="center" />

                        <Button
                            android:id="@+id/button_minushx"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/minus" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/air_hexagonal"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harga_rp_8_000"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/galonro" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button_plusro"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/plus" />

                        <EditText
                            android:id="@+id/jumlah_galon_ro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:editable="false"
                            android:ems="10"
                            android:hint="@string/nol"
                            android:inputType="none"
                            android:text="@string/nol"
                            android:textAlignment="center" />

                        <Button
                            android:id="@+id/button_minusro"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/minus" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/air_ro"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harga_rp_6_000"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </LinearLayout>

            <Button
                android:id="@+id/button_pesan"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pesan" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
